<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/tvForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/forecast"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/dateAndTime"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/dateAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvForecast"
        android:layout_alignStart="@+id/tvForecast"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="5dp"
        android:text="@string/dateAndTime"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/wdd_image"
        app:layout_constraintTop_toBottomOf="@id/tvForecast" />

    <ImageView
        android:id="@+id/wdd_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/picDescription"
        android:src="@drawable/_01n" />

    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="114dp"
        android:layout_toEndOf="@+id/wdd_image"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/condition"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wdd_image"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/temperature"
        app:layout_constraintStart_toStartOf="@id/tvForecast"
        app:layout_constraintTop_toBottomOf="@+id/wdd_image" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/pressure" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pressure"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/humidity" />

    <TextView
        android:id="@+id/cloudCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/humidity"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/cloudCover" />

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cloudCover"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/windSpeed" />

    <TextView
        android:id="@+id/windDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/windSpeed"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/windDirection" />

    <TextView
        android:id="@+id/rain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/windDirection"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/rain" />

    <TextView
        android:id="@+id/snow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rain"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/snow" />


</RelativeLayout>